Prevent PostItem up votes from wrapping

--- a/src/components/Posts/styles/_PostItem.scss
+++ b/src/components/Posts/styles/_PostItem.scss
@@ -98,6 +98,7 @@
 
   &_upvotes {
     margin-right: 0.5rem;
+    white-space: nowrap;
 
     &_icon {
       display: inline-block;
